--- a/css/admin/stylus/parts/configuration.styl
+++ b/css/admin/stylus/parts/configuration.styl
@@ -22,6 +22,9 @@
                     .conf-value
                         display flex
                         flex-direction column
+                        align-items flex-start
+                        select
+                            align-self unset
                     input:not([type="checkbox"]):not([type="radio"])
                     textarea
                         flex 1
